--- a/crates/redb/Cargo.toml
+++ b/crates/redb/Cargo.toml
@@ -13,6 +13,7 @@ tower-http.workspace = true
 itertools.workspace = true
 bincode.workspace = true
 hex.workspace = true
+thiserror.workspace = true
 
 dolos-core = { path = "../core" }
 
