--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,6 +95,7 @@ default-features = false
 features = ["fs", "num-integer-backend", "rustls-tls", "rustls-tls-native-roots"]
 
 [dev-dependencies]
+nix = { version = "0.30.1", features = ["signal"] }
 tempfile = "3.20.0"
 
 [[test]]
