--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,7 +95,12 @@ default-features = false
 features = ["fs", "num-integer-backend", "rustls-tls", "rustls-tls-native-roots"]
 
 [dev-dependencies]
+nix = { version = "0.30.1", features = ["signal"] }
 tempfile = "3.20.0"
+
+[[test]]
+name = "smoke"
+path = "tests/external/smoke.rs"
 
 [features]
 mithril = ["mithril-client"]
@@ -117,7 +122,7 @@ inherits = "release"
 lto = "thin"
 
 [workspace]
-members = ["crates/cardano", "crates/core", "crates/minibf", "crates/redb"]
+members = ["crates/cardano", "crates/core", "crates/minibf", "crates/redb", "xtask"]
 
 [workspace.dependencies]
 pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano"] }
