--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,88 +1,68 @@
-# Based on https://github.com/actions-rs/meta/blob/master/recipes/quickstart.md
+name: CI
 
 on:
   push:
-    branches:
-      - "**"
-    tags-ignore:
-      - v*
-
-name: Validate
+    branches: [main]
+  pull_request:
 
 jobs:
   check:
-    name: Check
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [
-            # windows-latest,
-            ubuntu-22.04,
-            macos-14,
-            macos-13,
-          ]
-        rust: [stable]
-    runs-on: ${{ matrix.os }}
+    name: Check Build
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - uses: Swatinem/rust-cache@v2
 
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+      - uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
-          toolchain: ${{ matrix.rust }}
+          toolchain: stable
           override: true
 
-      - name: Run cargo check
+      - name: Cargo check
         uses: actions-rs/cargo@v1
         with:
           command: check
-          args: --all-features
+          args: --workspace --all-targets
 
-  test:
-    name: Test Suite
+  lint:
+    name: Clippy Lint
     runs-on: ubuntu-latest
+    needs: check
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - uses: Swatinem/rust-cache@v2
 
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+      - uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
           toolchain: stable
+          components: clippy
           override: true
 
-      - name: Run cargo test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all-features
-
-  lints:
-    name: Lint Rust
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v4
-
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-          components: rustfmt, clippy
-
-      - name: Run cargo fmt
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
-
-      - name: Run cargo clippy
+      - name: Clippy
         uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --all-features -- -D warnings
+          args: --all-targets --all-features -- -D warnings
+
+  test:
+    name: Test (${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    needs: check
+    strategy:
+      matrix:
+        os: [ubuntu-22.04, macos-14, macos-13]
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: Swatinem/rust-cache@v2
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+
+      - name: Run tests
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --all-targets
