--- a/crates/minibf/Cargo.toml
+++ b/crates/minibf/Cargo.toml
@@ -19,6 +19,7 @@ axum = { version = "0.8.4", features = ["macros"] }
 hex = "0.4.3"
 serde_json = "1.0.140"
 bech32 = "0.11.0"
+blockfrost-openapi = "0.1.75"
 
 [features]
 phase2 = ["pallas/phase2"]
