--- a/crates/minibf/Cargo.toml
+++ b/crates/minibf/Cargo.toml
@@ -21,6 +21,7 @@ hex = "0.4.3"
 serde_json = "1.0.140"
 bech32 = "0.11.0"
 blockfrost-openapi = "0.1.75"
+rayon = "1.10.0"
 
 [features]
 phase2 = ["pallas/phase2"]
